--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Courier
+application.vendor=daniellim0510
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,8 +33,9 @@ dist.jar=${dist.dir}/Courier.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Courier
+endorsed.classpath=
 excludes=
-file.reference.itextpdf-5.4.0.jar=/home/daniellim0510/Downloads/itextpdf-5.4.0.jar
+file.reference.itextpdf-5.4.0.jar=itextpdf-5.4.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
